@@ -92,6 +92,7 @@ protected:
 	void on_messages_clear();
 	void on_messages_close();
 	void on_quit();
+	void on_draw();
 	void on_show_messages();
 	void on_store_positions();
 	void on_zoom_in();
@@ -134,6 +135,7 @@ protected:
 	Widget<Gtk::MenuItem>       _menu_alsa_connect;
 	Widget<Gtk::MenuItem>       _menu_alsa_disconnect;
 	Widget<Gtk::MenuItem>       _menu_file_quit;
+	Widget<Gtk::MenuItem>       _menu_draw;
 	Widget<Gtk::MenuItem>       _menu_help_about;
 	Widget<Gtk::MenuItem>       _menu_jack_connect;
 	Widget<Gtk::MenuItem>       _menu_jack_disconnect;
